Got rid of sections that are not necessary for this project

--- a/index.html
+++ b/index.html
@@ -65,12 +65,9 @@
 
                                             <ul class="nav navbar-nav navbar-right">
                                                 <li><a href="#home">Home</a></li>
-                                                <li><a href="#about"> About us</a></li>
+                                                <li><a href="#about">About us</a></li>
                                                 <li><a href="#service">Service</a></li>
-                                                <li><a href="#portfolio">Portfolio</a></li>
-                                                <li><a href="#blog">Blog</a></li>
                                                 <li><a href="#contact">Contact</a></li>
-                                                <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
 
 
                                                 <li>
@@ -168,7 +165,7 @@
                             <div class="col-sm-10 col-sm-offset-1">
                                 <div class="head_title text-center">
                                     <h4 class="subtitle">what we do?</h4>
-                                    <h2>Story about us</h2>
+                                    <h2>About this project</h2>
                                     <div class="separator"></div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
@@ -364,38 +361,6 @@
                 </div>
             </section>
 
-
-
-
-            <section id="device" class="device">
-                <div class="home-overlay">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-10 col-sm-offset-1">
-                                <div class="main_device_area text-center">
-                                    <div class="row">
-                                        <div class="head_title text-center">
-                                            <h4 class="subtitle">For all devices</h4>
-                                            <h2>Unique design</h2>
-                                            <div class="separator"></div>
-                                        </div>
-
-                                        <div class="main_device_content">
-                                            <div class="single_device">
-                                                <img src="assets/images/device1.png" alt="" />
-                                            </div>
-                                            <div class="single_device_two">
-                                                <img src="assets/images/device2.png" alt="" />
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
 
 
             <section id="doservice" class="doservice">
@@ -615,107 +580,6 @@
             </section>
 
 
-
-            <section id="clinetslogo" class="clinetslogo">
-                <div class="containter">
-                    <div class="row">
-                        <div class="col-sm-10 col-sm-offset-1">
-                            <div class="row">
-                                <div class="main_clinetslogo text-center">
-                                    <div class="col-sm-2"> <a href=""><img src="assets/images/clogo1.png" alt="" /></a></div>
-                                    <div class="col-sm-2"> <a href=""><img src="assets/images/clogo2.png" alt="" /></a></div>
-                                    <div class="col-sm-2"> <a href=""><img src="assets/images/clogo3.png" alt="" /></a></div>
-                                    <div class="col-sm-2"> <a href=""><img src="assets/images/clogo4.png" alt="" /></a></div>
-                                    <div class="col-sm-2"> <a href=""><img src="assets/images/clogo5.png" alt="" /></a></div>
-                                    <div class="col-sm-2"> <a href=""><img src="assets/images/clogo6.png" alt="" /></a></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-            <section id="portfolio" class="portfolio">
-                <div class="container-fluid">
-                    <div class="row">
-                        <div class="main_portfolio sections">
-                            <div class="head_title text-center">
-                                <h4 class="subtitle">What we do</h4>
-                                <h2>some of our work</h2>
-                                <div class="separator"></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                                    dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                                    ex ea commodo consequat. </p>
-                            </div>
-
-                            <div class="main_portfolio_content text-center">
-                                <div class="grid">
-                                    <div class="grid-item">
-                                        <img src="assets/images/pf1.jpg" alt="" />
-                                        <div class="grid_item_overlay all_overlay">
-                                            <i class="fa fa-picture-o"></i>
-                                            <p class="monseratregular">creatively designed</p>
-                                            <p class="robotolight">Lorem ipsum dolor sit</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <img src="assets/images/pf2.jpg" alt="" />
-                                        <div class="grid_item_overlay all_overlay">
-                                            <i class="fa fa-picture-o"></i>
-                                            <p class="monseratregular">creatively designed</p>
-                                            <p class="robotolight">Lorem ipsum dolor sit</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <img src="assets/images/pf3.jpg" alt="" />
-                                        <div class="grid_item_overlay all_overlay grid-item--width2-overlay">
-                                            <i class="fa fa-picture-o"></i>
-                                            <p class="monseratregular">creatively designed</p>
-                                            <p class="robotolight">Lorem ipsum dolor sit</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <img src="assets/images/pf4.jpg" alt="" />
-                                        <div class="grid_item_overlay all_overlay">
-                                            <i class="fa fa-picture-o"></i>
-                                            <p class="monseratregular">creatively designed</p>
-                                            <p class="robotolight">Lorem ipsum dolor sit</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <img src="assets/images/pf5.jpg" alt="" />
-                                        <div class="grid_item_overlay all_overlay">
-                                            <i class="fa fa-picture-o"></i>
-                                            <p class="monseratregular">creatively designed</p>
-                                            <p class="robotolight">Lorem ipsum dolor sit</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <img src="assets/images/pf6.jpg" alt="" />
-                                        <div class="grid_item_overlay all_overlay">
-                                            <i class="fa fa-picture-o"></i>
-                                            <p class="monseratregular">creatively designed</p>
-                                            <p class="robotolight">Lorem ipsum dolor sit</p>
-                                        </div>
-                                    </div>
-                                    <div class="grid-item">
-                                        <img src="assets/images/pf7.jpg" alt="" />
-                                        <div class="grid_item_overlay all_overlay">
-                                            <i class="fa fa-picture-o"></i>
-                                            <p class="monseratregular">creatively designed</p>
-                                            <p class="robotolight">Lorem ipsum dolor sit</p>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
             <section id="testimonial" class="testimonial">
                 <div class="container">
                     <div class="row">
@@ -849,123 +713,6 @@
                     </div>
                 </div>
             </section>
-
-
-            <section id="blog" class="blog">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="main_blog sections">
-                                <div class="head_title text-center">
-                                    <h4 class="subtitle">Our stories</h4>
-                                    <h2>Latest blog</h2>
-                                    <div class="separator"></div>
-                                </div>
-
-                                <div class="main_blog_content">
-                                    <div class="row">
-                                        <div class="col-sm-4">
-                                            <div class="single_blog">
-                                                <div class="single_blog_img">
-                                                    <img src="assets/images/blog1.jpg" alt="" />
-                                                    <div class="single_bolg_date">
-                                                        <h2>12</h2>
-                                                        <p class="robotolight">Jan</p>
-                                                    </div>
-                                                </div>
-                                                <div class="single_blog_content">
-                                                    <p class="monseratregular">Lorem ipsum dolor sit amet</p>
-                                                    <p>Consectetur elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                                    <hr />
-
-                                                    <div class="single_blog_bottom_content">
-                                                        <a class="robotolight" href=""><i class="fa fa-eye"></i>552</a>
-                                                        <a class="robotolight" href=""><i class="fa fa-commenting"></i>17</a>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="single_blog">
-                                                <div class="single_blog_img">
-                                                    <img src="assets/images/blog2.jpg" alt="" />
-                                                    <div class="single_bolg_date">
-                                                        <h2>12</h2>
-                                                        <p class="robotolight">Jan</p>
-                                                    </div>
-                                                </div>
-                                                <div class="single_blog_content">
-                                                    <p class="monseratregular">sed do eiusmod tempor</p>
-                                                    <p>Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                                    <hr />
-
-                                                    <div class="single_blog_bottom_content">
-                                                        <a class="robotolight" href=""><i class="fa fa-eye"></i>552</a>
-                                                        <a class="robotolight" href=""><i class="fa fa-commenting"></i>17</a>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="single_blog">
-                                                <div class="single_blog_img">
-                                                    <img src="assets/images/blog3.jpg" alt="" />
-                                                    <div class="single_bolg_date">
-                                                        <h2>12</h2>
-                                                        <p class="robotolight">Jan</p>
-                                                    </div>
-                                                </div>
-                                                <div class="single_blog_content">
-                                                    <p class="monseratregular">incididunt ut labore et dolore</p>
-                                                    <p>Elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                                                    <hr />
-
-                                                    <div class="single_blog_bottom_content">
-                                                        <a class="robotolight" href=""><i class="fa fa-eye"></i>552</a>
-                                                        <a class="robotolight" href=""><i class="fa fa-commenting"></i>17</a>
-                                                    </div>
-
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
-
-            <section id="maps" class="maps">
-                <div class="home-overlay">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="main_maps text-center">
-                                <div class="col-sm-12">
-
-                                    <div class="map_canvas_icon">
-                                        <i class="fa fa-map-marker" onClick="showmap()"></i>
-                                        <h2 type="button" value="Open map" onClick="showmap()">Open map</h2>
-                                    </div>
-                                    <div id="map_canvas"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
-
-
-
-
 
 
 
