Added relevant links and created a sample "meet our team" section

--- a/index.html
+++ b/index.html
@@ -67,25 +67,11 @@
                                                 <li><a href="#home">Home</a></li>
                                                 <li><a href="#about">About us</a></li>
                                                 <li><a href="#service">Service</a></li>
-                                                <li><a href="#contact">Contact</a></li>
+                                                <li><a href="#doservice">What we do</a></li>
+                                                <li><a href="#team">Who we are</a></li>
+                                                <li><a href="#contact">Contact us</a></li>
 
-
-                                                <li>
-                                                    <a href="#"  data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                                                        <i class="fa fa-search"></i>
-                                                    </a>
-                                                    <ul class="dropdown-menu">
-                                                        <li>
-                                                            <form class="navbar-form" role="search">
-                                                                <div class="form-group">
-                                                                    <input type="text" class="form-control" placeholder="Search">
-                                                                </div>
-                                                            </form>
-                                                        </li>
-                                                    </ul>
-                                                </li>
                                             </ul>
-
 
                                         </div>
 
@@ -128,18 +114,6 @@
                                                 to MoGo</h1>
                                             <div class="whiteseparator"></div>
 
-                                            <div class="home_btn">
-                                                <a href="" class="btn btn-primary">LEARN MORE</a>
-                                            </div>
-
-                                        </div>
-                                    </div>
-                                    <div class="single_home_slider">
-                                        <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                            <h4>Creative Template</h4>
-                                            <h1>Welcome
-                                                to MoGo</h1>
-                                            <div class="whiteseparator"></div>
                                             <div class="home_btn">
                                                 <a href="" class="btn btn-primary">LEARN MORE</a>
                                             </div>
@@ -290,7 +264,7 @@
                                                     <i class="fa fa-clock-o"></i>
                                                 </div>
                                                 <div class="single_service_content">
-                                                    <h3>Photography</h3>
+                                                    <h3>Nonvegetarian</h3>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                                                 </div>
                                             </div>
@@ -301,7 +275,7 @@
                                                     <i class="fa fa-picture-o"></i>
                                                 </div>
                                                 <div class="single_service_content">
-                                                    <h3>Photography</h3>
+                                                    <h3>Vegetarian</h3>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                                                 </div>
                                             </div>
@@ -312,7 +286,7 @@
                                                     <i class="fa fa-television"></i>
                                                 </div>
                                                 <div class="single_service_content">
-                                                    <h3>Photography</h3>
+                                                    <h3>Vegan</h3>
                                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
                                                 </div>
                                             </div>
@@ -523,7 +497,7 @@
                                 <div class="col-sm-4">
                                     <div class="single_team">
                                         <div class="single_team_img">
-                                            <img src="assets/images/team1.jpg" alt="" />
+                                            <img src="assets/img/austen.jpg" alt="" />
                                             <div class="single_team_overlay all_overlay">
                                                 <a href=""><i class="fa fa-facebook"></i></a>
                                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -532,7 +506,7 @@
                                             </div>
                                         </div>
                                         <div class="single_team_content">
-                                            <h5>Matthew Dix</h5>
+                                            <h5>Austen Liao</h5>
                                             <p class="robotolight">Graphic Design</p>
                                         </div>
                                     </div>
@@ -540,7 +514,7 @@
                                 <div class="col-sm-4">
                                     <div class="single_team">
                                         <div class="single_team_img">
-                                            <img src="assets/images/team2.jpg" alt="" />
+                                            <img src="assets/img/amisha.jpg" alt="" />
                                             <div class="single_team_overlay all_overlay">
                                                 <a href=""><i class="fa fa-facebook"></i></a>
                                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -549,7 +523,7 @@
                                             </div>
                                         </div>
                                         <div class="single_team_content">
-                                            <h5>Christopher Campbell</h5>
+                                            <h5>Amisha Jain</h5>
                                             <p class="robotolight">Branding/UX design</p>
                                         </div>
 
@@ -558,7 +532,7 @@
                                 <div class="col-sm-4">
                                     <div class="single_team">
                                         <div class="single_team_img">
-                                            <img src="assets/images/team3.jpg" alt="" />
+                                            <img src="assets/img/sandwich.jpg" alt="" />
                                             <div class="single_team_overlay all_overlay">
                                                 <a href=""><i class="fa fa-facebook"></i></a>
                                                 <a href=""><i class="fa fa-twitter"></i></a>
@@ -567,7 +541,7 @@
                                             </div>
                                         </div>
                                         <div class="single_team_content">
-                                            <h5>Michael Fertig</h5>
+                                            <h5>Samik Pradhan</h5>
                                             <p class="robotolight">Developer</p>
                                         </div>
 
@@ -628,87 +602,6 @@
                                 </div>
                             </div>
 
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-
-
-            <section id="client" class="client">
-                <div class="home-overlay">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-10 col-sm-offset-1">
-                                <div class="main_client sections">
-                                    <div class="head_title text-center">
-                                        <h4 class="subtitle">Happy Clients</h4>
-                                        <h2>What people say</h2>
-                                        <div class="separator"></div>
-                                    </div>
-
-                                    <div class="main_client_content">
-                                        <div class="row">
-                                            <div class="col-sm-6 col-xs-12">
-                                                <div class="single_client">
-                                                    <div class="single_client_img">
-                                                        <img class="img-circle img-responsive" src="assets/images/cl1.jpg" alt="" />
-                                                    </div>
-                                                    <div class="single_client_content">
-                                                        <p class="monseratregular">Matthew Dix</p>
-                                                        <p class="robotolight">Graphic Design</p>
-                                                        <span class="separator4"></span>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                                                            et dolore magna aliqua. Ut enim ad minim.</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-6 col-xs-12">
-                                                <div class="single_client">
-                                                    <div class="single_client_img">
-                                                        <img class="img-circle img-responsive" src="assets/images/cl2.jpg" alt="" />
-                                                    </div>
-                                                    <div class="single_client_content">
-                                                        <p class="monseratregular">Matthew Dix</p>
-                                                        <p class="robotolight">Graphic Design</p>
-                                                        <span class="separator4"></span>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                                                            et dolore magna aliqua. Ut enim ad minim.</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-6 col-xs-12">
-                                                <div class="single_client">
-                                                    <div class="single_client_img">
-                                                        <img class="img-circle img-responsive" src="assets/images/cl3.jpg" alt="" />
-                                                    </div>
-                                                    <div class="single_client_content">
-                                                        <p class="monseratregular">Matthew Dix</p>
-                                                        <p class="robotolight">Graphic Design</p>
-                                                        <span class="separator4"></span>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                                                            et dolore magna aliqua. Ut enim ad minim.</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="col-sm-6 col-xs-12">
-                                                <div class="single_client">
-                                                    <div class="single_client_img">
-                                                        <img class="img-circle img-responsive" src="assets/images/cl4.jpg" alt="" />
-                                                    </div>
-                                                    <div class="single_client_content">
-                                                        <p class="monseratregular">Matthew Dix</p>
-                                                        <p class="robotolight">Graphic Design</p>
-                                                        <span class="separator4"></span>
-                                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                                                            et dolore magna aliqua. Ut enim ad minim.</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
