--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                                 <li><a href="#home">Home</a></li>
                                                 <li><a href="#about">About us</a></li>
                                                 <li><a href="#service">Service</a></li>
-                                                <li><a href="#doservice">What we do</a></li>
+                                                <li><a href="#doservice">Diets</a></li>
                                                 <li><a href="#team">Who we are</a></li>
                                                 <li><a href="#contact">Contact us</a></li>
 
@@ -143,45 +143,6 @@
                                     <div class="separator"></div>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
-                                </div>
-
-                                <div class="main_about_content">
-                                    <div class="col-sm-4 col-xs-12">
-                                        <div class="single_about">
-                                            <div class="single_about_img">
-                                                <img src="assets/images/ab1.jpg" alt="" />
-                                            </div>
-                                            <div class="single_about_img_overlay all_overlay">
-                                                <a href=""><i class="fa fa-users"></i>
-                                                    <p>super team</p>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4 col-xs-12">
-                                        <div class="single_about">
-                                            <div class="single_about_img">
-                                                <img src="assets/images/ab2.jpg" alt="" />
-                                            </div>
-                                            <div class="single_about_img_overlay all_overlay">
-                                                <a href=""><i class="fa fa-users"></i>
-                                                    <p>super team</p>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-4 col-xs-12">
-                                        <div class="single_about">
-                                            <div class="single_about_img">
-                                                <img src="assets/images/ab3.jpg" alt="" />
-                                            </div>
-                                            <div class="single_about_img_overlay all_overlay">
-                                                <a href=""><i class="fa fa-users"></i>
-                                                    <p>super team</p>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
 
@@ -343,7 +304,7 @@
                         <div class="main_doservice sections">
                             <div class="head_title text-center">
                                 <h4 class="subtitle">Service</h4>
-                                <h2>what we do</h2>
+                                <h2>Types of Diets</h2>
                                 <div class="separator"></div>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                                     dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
@@ -364,7 +325,7 @@
                                                 <div class="panel-heading" role="tab" id="headingOne">
                                                     <h4 class="panel-title">
                                                         <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                            <i class="fa fa-picture-o"></i> Photography <i class="fa fa-chevron-down"></i>
+                                                            <i class="fa fa-picture-o"></i> non-vegetarian <i class="fa fa-chevron-down"></i>
                                                         </a>
                                                     </h4>
                                                 </div>
@@ -381,7 +342,7 @@
                                                 <div class="panel-heading" role="tab" id="headingTwo">
                                                     <h4 class="panel-title">
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                            <i class="fa fa-map-signs"></i> creativity <i class="fa fa-chevron-down"></i>
+                                                            <i class="fa fa-map-signs"></i> vegetarian <i class="fa fa-chevron-down"></i>
                                                         </a>
                                                     </h4>
                                                 </div>
@@ -398,7 +359,7 @@
                                                 <div class="panel-heading" role="tab" id="headingThree">
                                                     <h4 class="panel-title">
                                                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                            <i class="fa fa-bullseye"></i> web design <i class="fa fa-chevron-down"></i>
+                                                            <i class="fa fa-bullseye"></i> vegan <i class="fa fa-chevron-down"></i>
                                                         </a>
                                                     </h4>
                                                 </div>
@@ -507,7 +468,6 @@
                                         </div>
                                         <div class="single_team_content">
                                             <h5>Austen Liao</h5>
-                                            <p class="robotolight">Graphic Design</p>
                                         </div>
                                     </div>
                                 </div>
@@ -524,7 +484,6 @@
                                         </div>
                                         <div class="single_team_content">
                                             <h5>Amisha Jain</h5>
-                                            <p class="robotolight">Branding/UX design</p>
                                         </div>
 
                                     </div>
@@ -542,7 +501,6 @@
                                         </div>
                                         <div class="single_team_content">
                                             <h5>Samik Pradhan</h5>
-                                            <p class="robotolight">Developer</p>
                                         </div>
 
                                     </div>
