--- a/index.html
+++ b/index.html
@@ -141,7 +141,12 @@
                                     <h4 class="subtitle">what we do?</h4>
                                     <h2>About this project</h2>
                                     <div class="separator"></div>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                                    <p>13.7 billion metric tons.
+Every year, the world produces 13.7 billion metric tons of carbon dioxide emissions through the food that it consumes. Our carbon footprint has been on an upward trajectory and the effects are evident: the IPCC claims that the planet will cross a threshold into environmental ruin by 2036. It is past time that we take serious precautions to curb our CO2 emissions by being conscientious of the foods we are eating every day, and Foodprints is here to help with just that. 
+
+Foodprint is a software that allows the user to progressively decrease their carbon footprint by tracking the amount of carbon emissions their diet is producing on a weekly basis. Users simply input the foods they are eating and the software develops a comparison platform for the following weeks that would help the user decrease their carbon footprint by 33% after only a few months.
+Foodprint helps take away the visceral distaste that many have when it comes to making significant changes to their diets. Our goal is to help the world’s citizens do their part to prevent climate change from making our planet inhabitable, and to gradually allow the food supply chain to decrease the overall production of such foods and make the Earth an eco-friendly home for future generations.
+ </p>
 
                                 </div>
                             </div>
