--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                 <div class="col-sm-4">
                                     <div class="single_team">
                                         <div class="single_team_img">
-                                            <img src="assets/img/amisha.jpg" alt="" />
+                                            <img src="assets/img/amishapic.png" alt="" />
                                             <div class="single_team_overlay all_overlay">
                                                 <a href=""><i class="fa fa-facebook"></i></a>
                                                 <a href=""><i class="fa fa-twitter"></i></a>
