--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
         <link rel="stylesheet" href="assets/css/responsive.css" />
 
         <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <!-- favicon -->
+         <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+
     </head>
     <body data-spy="scroll" data-target=".navbar-collapse">
         <!--[if lt IE 8]>
@@ -53,7 +57,7 @@
                                                 <span class="icon-bar"></span>
                                             </button>
                                             <a class="navbar-brand" href="#home">
-                                                <img src="assets/images/logo.png"/>
+                                                <img src="assets/img/logo.png" alt="logo" height="35px" width="45px" style="vertical-align:top" />
                                             </a>
                                         </div>
 
@@ -142,7 +146,7 @@
                                     <h2>About this project</h2>
                                     <div class="separator"></div>
                                     <p>13.7 billion metric tons.
-Every year, the world produces 13.7 billion metric tons of carbon dioxide emissions through the food that it consumes. Our carbon footprint has been on an upward trajectory and the effects are evident: the IPCC claims that the planet will cross a threshold into environmental ruin by 2036. It is past time that we take serious precautions to curb our CO2 emissions by being conscientious of the foods we are eating every day, and Foodprint is here to help with just that. 
+Every year, the world produces 13.7 billion metric tons of carbon dioxide emissions through the food that it consumes. Our carbon footprint has been on an upward trajectory and the effects are evident: the IPCC claims that the planet will cross a threshold into environmental ruin by 2036. It is past time that we take serious precautions to curb our CO2 emissions by being conscientious of the foods we are eating every day, and Foodprint is here to help with just that.
 
 Foodprint is a software that allows the user to progressively decrease their carbon footprint by tracking the amount of carbon emissions their diet is producing on a weekly basis. Users simply input the foods they are eating and the software develops a comparison platform for the following weeks that would help the user decrease their carbon footprint by 33% after only a few months.
 Foodprint helps take away the visceral distaste that many have when it comes to making significant changes to their diets. Our goal is to help the world’s citizens do their part to prevent climate change from making our planet inhabitable, and to gradually allow the food supply chain to decrease the overall production of such foods and make the Earth an eco-friendly home for future generations.
@@ -579,116 +583,22 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                             <div class="col-sm-4 col-xs-12">
                                 <div class="single_widget wow fadeIn" data-wow-duration="800ms">
                                     <div class="footer_logo">
-                                        <img src="assets/images/footerlogo.png" alt="" />
-                                    </div>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-                                        nisi ut aliquip ex ea commodo consequat. </p>
-
-
-                                    <div class="footer_subcribs_area">
-                                        <p class="monseratregular"><strong>15k</strong> followers</p>
-                                        <hr />
-                                        <div class="flowus">
-                                            <a href="" class="robotolight"> Follow Us : </a>
-                                            <a href=""><i class="fa fa-facebook"></i></a>
-                                            <a href=""><i class="fa fa-twitter"></i></a>
-                                            <a href=""><i class="fa fa-google-plus"></i></a>
-                                            <a href=""><i class="fa fa-instagram"></i></a>
-                                            <a href=""><i class="fa fa-pinterest-p"></i></a>
-                                            <a href=""><i class="fa fa-youtube"></i></a>
-                                            <a href=""><i class="fa fa-rss"></i></a>
-                                            <a href=""><i class="fa fa-dribbble"></i></a>
-                                        </div>
-
-                                        <form class="navbar-form navbar-left" role="search">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control" placeholder="Search">
-                                                <button type="submit" class="submit_btn">Subscribe</button>
-                                            </div>
-
-                                        </form>
+                                        <img src="assets/img/logo.png" alt="logo" height="200px" width="200px" />
                                     </div>
                                 </div>
                             </div>
 
                             <div class="col-sm-8">
-                                <div class="row">
-                                    <div class="col-sm-7  col-xs-12">
-                                        <div class="single_widget wow fadeIn" data-wow-duration="800ms">
-                                            <p class="monseratregular">blogs</p>
-                                            <span class="separator4"></span>
-                                            <div class="single_widget_blog">
-                                                <div class="single_widget_img">
-                                                    <img src="assets/images/fb1.jpg" alt="" />
-                                                </div>
-                                                <div class="single_widget_content">
-                                                    <p class="monseratregular">Lorem ipsum dolor sit amet,
-                                                        consectetur adipiscing</p>
-                                                    <p class="robotolight">Jan 9, 2016</p>
-                                                </div>
-                                            </div>
-                                            <div class="single_widget_blog">
-                                                <div class="single_widget_img">
-                                                    <img src="assets/images/fb2.jpg" alt="" />
-                                                </div>
-                                                <div class="single_widget_content">
-                                                    <p class="monseratregular">Lorem ipsum dolor sit amet,
-                                                        consectetur adipiscing</p>
-                                                    <p class="robotolight">Jan 9, 2016</p>
-                                                </div>
-                                            </div>
-                                            <div class="single_widget_blog">
-                                                <div class="single_widget_img">
-                                                    <img src="assets/images/fb3.jpg" alt="" />
-                                                </div>
-                                                <div class="single_widget_content">
-                                                    <p class="monseratregular">Lorem ipsum dolor sit amet,
-                                                        consectetur adipiscing</p>
-                                                    <p class="robotolight">Jan 9, 2016</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+
 
                                     <div class="col-sm-5 col-xs-12">
                                         <div class="single_widget wow fadeIn" data-wow-duration="800ms">
-                                            <p class="monseratregular">instagram</p>
-                                            <span class="separator4"></span>
+                                            <p class="monseratregular">contact us</p>
 
-                                            <div class="footer_gellary">
-                                                <div class="row">
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg1.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg2.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg3.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg4.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg5.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg6.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg7.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg8.jpg" alt="" />
-                                                    </div>
-                                                    <div class="col-sm-4 col-xs-6 no-padding">
-                                                        <img src="assets/images/fg9.jpg" alt="" />
-                                                    </div>
-                                                </div>
+                                            <p>amishaj@berkeley.edu</p>
+                                            <p>austenliao@berkeley.edu</p>
+                                            <p>srpradha@ucsc.edu</p>
 
-
-                                            </div>
                                         </div>
                                     </div>
                                 </div>
