--- a/index.html
+++ b/index.html
@@ -111,12 +111,7 @@
 
                                         </div>
                                     </div>
-                                    <div class="single_home_slider">
-                                        <div class="main_home wow fadeInUp" data-wow-duration="700ms">
-                                            <h4>Creative Template</h4>
-                                            <h1>Welcome
-                                                to MoGo</h1>
-                                            <div class="whiteseparator"></div>
+                  
 
                                             <div class="home_btn">
                                                 <a href="" class="btn btn-primary">LEARN MORE</a>
@@ -139,16 +134,17 @@
                 <div class="container">
                     <div class="row">
 
-                        <div class="main_about_area sections text-center">
+                        <div class="main_about_area sections text-left">
                             <div class="col-sm-10 col-sm-offset-1">
                                 <div class="head_title text-center">
                                     <h4 class="subtitle">what we do?</h4>
                                     <h2>About this project</h2>
                                     <div class="separator"></div>
-                                    <p>13.7 billion metric tons.
+                                    <p><b>13.7 billion metric tons.</b> <br>
 Every year, the world produces 13.7 billion metric tons of carbon dioxide emissions through the food that it consumes. Our carbon footprint has been on an upward trajectory and the effects are evident: the IPCC claims that the planet will cross a threshold into environmental ruin by 2036. It is past time that we take serious precautions to curb our CO2 emissions by being conscientious of the foods we are eating every day, and Foodprint is here to help with just that.
+<br>
 
-Foodprint is a software that allows the user to progressively decrease their carbon footprint by tracking the amount of carbon emissions their diet is producing on a weekly basis. Users simply input the foods they are eating and the software develops a comparison platform for the following weeks that would help the user decrease their carbon footprint by 33% after only a few months.
+Foodprint is a software that allows the user to progressively decrease their carbon footprint by tracking the amount of carbon emissions their diet is producing on a weekly basis. Users simply input the foods they are eating and the software develops a comparison platform for the following weeks that would help the user decrease their carbon footprint by 33% after only a few months. <br>
 Foodprint helps take away the visceral distaste that many have when it comes to making significant changes to their diets. Our goal is to help the world’s citizens do their part to prevent climate change from making our planet inhabitable, and to gradually allow the food supply chain to decrease the overall production of such foods and make the Earth an eco-friendly home for future generations.
  </p>
 
