--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                             <h1>Foodprint</h1>
 
                                             <div class="whiteseparator"></div>
-                                            
+
 
                                         </div>
                                     </div>
@@ -221,77 +221,7 @@ Foodprint helps take away the visceral distaste that many have when it comes to 
                                         <div class="separator"></div>
                                     </div>
 
-                                    <div class="main_service_content">
-                                        <div class="col-sm-4">
-                                            <div class="single_service">
-                                                <div class="single_service_icon">
-                                                    <i class="fa fa-clock-o"></i>
-                                                </div>
-                                                <div class="single_service_content">
-                                                    <h3>Nonvegetarian</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="single_service">
-                                                <div class="single_service_icon">
-                                                    <i class="fa fa-picture-o"></i>
-                                                </div>
-                                                <div class="single_service_content">
-                                                    <h3>Vegetarian</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="single_service">
-                                                <div class="single_service_icon">
-                                                    <i class="fa fa-television"></i>
-                                                </div>
-                                                <div class="single_service_content">
-                                                    <h3>Vegan</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="border_devider"></div>
-
-                                        <div class="col-sm-4">
-                                            <div class="single_service">
-                                                <div class="single_service_icon">
-                                                    <i class="fa fa-object-group"></i>
-                                                </div>
-                                                <div class="single_service_content">
-                                                    <h3>Photography</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="single_service">
-                                                <div class="single_service_icon">
-                                                    <i class="fa fa-home"></i>
-                                                </div>
-                                                <div class="single_service_content">
-                                                    <h3>Photography</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="col-sm-4">
-                                            <div class="single_service">
-                                                <div class="single_service_icon">
-                                                    <i class="fa fa-book"></i>
-                                                </div>
-                                                <div class="single_service_content">
-                                                    <h3>Photography</h3>
-                                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <iframe height="700px" width="100%" src="https://repl.it/@yosemine/AustereReadyLivedistro?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
                                 </div>
                             </div>
                         </div>
